# mpcorbfile

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  config_poetry_with_pypirc_credentials.py  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  jupyter  jupyter.rst  make.bat  modules.rst  usage.rst
jupyter/: mpcorbfile.py  pyephem.ipynb  rebound.ipynb  test.ipynb
src/mpcorbfile/: __init__.py  cli.py  mpcorbfile.py
src/mpcorbfile.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_mpcorbfile.py
