[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpcorbfile"
version = "0.1.0"
description = "Read and write MPCORB files from  minor planet center"
readme = "README.rst"
authors = [
  {name = "Nachoplus", email = "mas.ignacio@gmail.com"}
]
maintainers = [
  {name = "Nachoplus", email = "mas.ignacio@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/nachoplus/mpcorbfile/issues"
changelog = "https://github.com/nachoplus/mpcorbfile/blob/master/changelog.md"
homepage = "https://github.com/nachoplus/mpcorbfile"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

